# InsightBoard-ai

./: .railpackignore  Dockerfile  README.md  alembic.ini  apis_docs.txt  main.py  migrate.py  pyproject.toml  req.txt
alembic/: env.py
alembic/versions/: 27217aa64bbf_import_model.py  44d41aba24a1_import_model.py  7f0d14d07938_update_model.py
app/: main.py
app/api/: tasks.py  transcripts.py
app/core/: db.py
app/models/: task.py
app/schemas/: task.py  task_filter.py  transcript.py
app/services/: ai_service.py  task_service.py
app/test/: checkdbconnect.py  taskmodel.py  tralateapi.py
app/utils/: exact_details.py  text.py
