[tool.poetry]
name = "insightboard-backend"
version = "0.1.0"
description = "FastAPI backend for InsightBoard AI Dashboard"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.7.0"
openai = "^1.30.0"
python-dotenv = "^1.0.1"
starlette = "^0.36.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
